testdata/baselines/reference/submodule/conformance/uniqueSymbolsDeclarationsInJs.errors.txt
uniqueSymbolsDeclarationsInJs.js(4,8): error TS8009: The 'readonly' modifier can only be used in TypeScript files.
uniqueSymbolsDeclarationsInJs.js(8,15): error TS8010: Type annotations can only be used in TypeScript files.
uniqueSymbolsDeclarationsInJs.js(9,8): error TS8009: The 'readonly' modifier can only be used in TypeScript files.
uniqueSymbolsDeclarationsInJs.js(13,15): error TS8010: Type annotations can only be used in TypeScript files.
uniqueSymbolsDeclarationsInJs.js(14,8): error TS8009: The 'readonly' modifier can only be used in TypeScript files.
uniqueSymbolsDeclarationsInJs.js(20,8): error TS8009: The 'readonly' modifier can only be used in TypeScript files.
uniqueSymbolsDeclarationsInJs.js(26,12): error TS8010: Type annotations can only be used in TypeScript files.


==== uniqueSymbolsDeclarationsInJs.js (7 errors) ====
    // classes
    class C {
        /**
         * @readonly
           ~~~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'readonly' modifier can only be used in TypeScript files.
        static readonlyStaticCall = Symbol();
        /**
         * @type {unique symbol}
                  ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @readonly
           ~~~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'readonly' modifier can only be used in TypeScript files.
        static readonlyStaticType;
        /**
         * @type {unique symbol}
                  ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @readonly
           ~~~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'readonly' modifier can only be used in TypeScript files.
        static readonlyStaticTypeAndCall = Symbol();
        static readwriteStaticCall = Symbol();
    
        /**
         * @readonly
           ~~~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'readonly' modifier can only be used in TypeScript files.
        readonlyCall = Symbol();
        readwriteCall = Symbol();
    }
    
    /** @type {unique symbol} */
               ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const a = Symbol();
    